wrote unit tests for the services in the backend